# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
