[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alex Fera <alexandrufera@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.11"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.3"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11.16"
